force-app/main/default/objects/Contact/fields/Budget__c.field-meta.xml
<CustomField>
    <fullName>Budget__c</fullName>
    <description>This is fed through from the RFQ form that comes in via Pardot</description>
    <label>Budget</label>
    <length>255</length>
    <type>Text</type>
</CustomField>