force-app/main/default/objects/Contact/fields/Campaign_Tags__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Tags__c</fullName>
    <description>Used to pull contacts for reports that are then used in campaigns.  Example [EVO]</description>
    <label>Campaign Tags</label>
    <length>100</length>
    <type>Text</type>
</CustomField>