force-app/main/default/objects/Contact/fields/chargebeeapps__ChargeBee_Modified_Time__c.field-meta.xml
<CustomField>
    <fullName>chargebeeapps__ChargeBee_Modified_Time__c</fullName>
    <label>ChargeBee_Modified_Time</label>
    <type>DateTime</type>
</CustomField>