force-app/main/default/objects/Contact/fields/chargebeeapps__Payment_Method_Type__c.field-meta.xml
<CustomField>
    <fullName>chargebeeapps__Payment_Method_Type__c</fullName>
    <description>Payment method type</description>
    <label>Payment Method Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>