force-app/main/default/objects/Contact/fields/chargebeeapps__Sync_with_Chargebee__c.field-meta.xml
<CustomField>
    <fullName>chargebeeapps__Sync_with_Chargebee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sync with Chargebee</label>
    <type>Checkbox</type>
</CustomField>