force-app/main/default/objects/Contact/fields/Contact_Calendly_Link__c.field-meta.xml
<CustomField>
    <fullName>Contact_Calendly_Link__c</fullName>
    <formula>Account.Owner.Calendly_URL_Link__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Calendly Link</label>
    <type>Text</type>
</CustomField>