force-app/main/default/objects/Contact/fields/Contact_Source__c.field-meta.xml
<CustomField>
    <fullName>Contact_Source__c</fullName>
    <label>Contact Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Lead_Source</valueSetName>
    </valueSet>
</CustomField>