force-app/main/default/objects/Contact/fields/Contact_Subsource__c.field-meta.xml
<CustomField>
    <fullName>Contact_Subsource__c</fullName>
    <label>Contact Subsource</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Contact_Source__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Lead_Subsource</valueSetName>
    </valueSet>
</CustomField>