force-app/main/default/objects/Contact/fields/Contains_Closed_Won_Opps__c.field-meta.xml
<CustomField>
    <fullName>Contains_Closed_Won_Opps__c</fullName>
    <formula>IF(Account.of_Closed_Won_Opps__c &gt;0, True, False)</formula>
    <label>Contains Closed Won Opps</label>
    <type>Checkbox</type>
</CustomField>