force-app/main/default/objects/Contact/fields/Data_Source__c.field-meta.xml
<CustomField>
    <fullName>Data_Source__c</fullName>
    <label>Data Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RevenueBase</fullName>
            </value>
            <value>
                <fullName>ZoomInfo</fullName>
            </value>
            <value>
                <fullName>LinkedIn</fullName>
            </value>
            <value>
                <fullName>Apollo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>