force-app/main/default/objects/Contact/fields/Functional_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Functional_Requirements__c</fullName>
    <description>This is for the Functional Requirements, that come over from the Custom Development RFQ form</description>
    <label>Functional Requirements</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>