force-app/main/default/objects/Contact/fields/Hubspot_Lifecycle_Stage__c.field-meta.xml
<CustomField>
    <fullName>Hubspot_Lifecycle_Stage__c</fullName>
    <inlineHelpText>This field manages how we market to contacts. For example, someone marked as a LEAD in this field will receive our LEAD emails. The fields should be straight forward, with the exception of partners. They are known as &quot;Evangelists&quot;.</inlineHelpText>
    <label>Hubspot Lifecycle Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Prospect</fullName>
                <default>true</default>
                <label>Prospect</label>
            </value>
            <value>
                <fullName>Marketing Qualified Lead</fullName>
            </value>
            <value>
                <fullName>Partner Qualified Lead</fullName>
            </value>
            <value>
                <fullName>Sales Accepted Lead</fullName>
            </value>
            <value>
                <fullName>Value Aware</fullName>
            </value>
            <value>
                <fullName>Technically Aware</fullName>
            </value>
            <value>
                <fullName>Commit</fullName>
            </value>
            <value>
                <fullName>Align</fullName>
            </value>
            <value>
                <fullName>Prove</fullName>
            </value>
            <value>
                <fullName>Kick Off</fullName>
            </value>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Lost</fullName>
            </value>
            <value>
                <fullName>Churned</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>