force-app/main/default/objects/Contact/fields/Hubspot_Record_ID__c.field-meta.xml
<CustomField>
    <fullName>Hubspot_Record_ID__c</fullName>
    <externalId>true</externalId>
    <label>Hubspot Record ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>