force-app/main/default/objects/Contact/fields/ia_crm__Intacct_Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Intacct_Contact_ID__c</fullName>
    <inlineHelpText>This field will keep the Intacct Contact Id.</inlineHelpText>
    <label>Intacct Contact ID</label>
    <length>200</length>
    <type>Text</type>
</CustomField>