force-app/main/default/objects/Contact/fields/Import_Note__c.field-meta.xml
<CustomField>
    <fullName>Import_Note__c</fullName>
    <label>Import Note</label>
    <length>255</length>
    <type>Text</type>
</CustomField>