force-app/main/default/objects/Contact/fields/Inactive_Email_Opt_Out_Notes__c.field-meta.xml
<CustomField>
    <fullName>Inactive_Email_Opt_Out_Notes__c</fullName>
    <label>Inactive/Email Opt Out Notes</label>
    <type>TextArea</type>
</CustomField>