force-app/main/default/objects/Contact/fields/Increment_from_Pardot__c.field-meta.xml
<CustomField>
    <fullName>Increment_from_Pardot__c</fullName>
    <description>Used to auto-create Opportunity from the custom development form</description>
    <label>Increment from Pardot</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>