force-app/main/default/objects/Contact/fields/Is_Create_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Is_Create_Opportunity__c</fullName>
    <formula>IF((NOW() -  Last_Time_Opportunity_Created__c ) *24*60 &gt; 15, True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Create Opportunity</label>
    <type>Checkbox</type>
</CustomField>