force-app/main/default/objects/Contact/fields/Job_Seniority__c.field-meta.xml
<CustomField>
    <fullName>Job_Seniority__c</fullName>
    <description>Job Title Seniority Level</description>
    <label>Job Seniority</label>
    <length>100</length>
    <type>Text</type>
</CustomField>