force-app/main/default/objects/Contact/fields/Junk_Lead_Subsource__c.field-meta.xml
<CustomField>
    <fullName>Junk_Lead_Subsource__c</fullName>
    <label>Junk_Lead Subsource</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Zoominfo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>