force-app/main/default/objects/Contact/fields/Last_Sales_Activity_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Sales_Activity_Date__c</fullName>
    <description>Date of last task</description>
    <label>Last Sales Activity Date</label>
    <type>Date</type>
</CustomField>