force-app/main/default/objects/Contact/fields/Last_Time_Opportunity_Created__c.field-meta.xml
<CustomField>
    <fullName>Last_Time_Opportunity_Created__c</fullName>
    <label>Last Time Opportunity Created</label>
    <type>DateTime</type>
</CustomField>