force-app/main/default/objects/Contact/fields/Marketing_Persona__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Persona__c</fullName>
    <description>Persona value based on job titles. Generated by Pardot Engagement Studio program (Persona Update).</description>
    <inlineHelpText>This persona is generated by Marketing based on the prospect&apos;s job title.</inlineHelpText>
    <label>Marketing Persona</label>
    <length>50</length>
    <type>Text</type>
</CustomField>