force-app/main/default/objects/Contact/fields/MQL_Date__c.field-meta.xml
<CustomField>
    <fullName>MQL_Date__c</fullName>
    <description>Date contact became MQL</description>
    <label>MQL Date</label>
    <type>Date</type>
</CustomField>