force-app/main/default/objects/Contact/fields/Owner_Calendly_Link__c.field-meta.xml
<CustomField>
    <fullName>Owner_Calendly_Link__c</fullName>
    <label>Contact Owner Calendly Link</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>