force-app/main/default/objects/Contact/fields/Qualification_Questions__c.field-meta.xml
<CustomField>
    <fullName>Qualification_Questions__c</fullName>
    <defaultValue>&quot;https://docs.google.com/document/d/1k6YOokUPsJHiW5a1MMU2P86CIospEx7hpZW3uMxyiZE/edit&quot;</defaultValue>
    <label>Qualification Questions</label>
    <type>Url</type>
</CustomField>