force-app/main/default/objects/Contact/fields/Software_Search_Reason__c.field-meta.xml
<CustomField>
    <fullName>Software_Search_Reason__c</fullName>
    <label>Need</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>