force-app/main/default/objects/Contact/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Contact</fullName>
                <default>true</default>
                <label>New Contact</label>
            </value>
            <value>
                <fullName>New - Inbound</fullName>
            </value>
            <value>
                <fullName>New - Imported</fullName>
            </value>
            <value>
                <fullName>New Prospect</fullName>
            </value>
            <value>
                <fullName>Working - Sales</fullName>
                <label>In Process - Sales</label>
            </value>
            <value>
                <fullName>Marketing Qualified</fullName>
            </value>
            <value>
                <fullName>Nurture - Marketing</fullName>
            </value>
            <value>
                <fullName>Lead</fullName>
            </value>
            <value>
                <fullName>Sales Qualified</fullName>
            </value>
            <value>
                <fullName>New Customer</fullName>
            </value>
            <value>
                <fullName>Current Customer</fullName>
            </value>
            <value>
                <fullName>Cold</fullName>
            </value>
            <value>
                <fullName>Dead</fullName>
            </value>
            <value>
                <fullName>Delete</fullName>
            </value>
            <value>
                <fullName>Dead - Bad / No Contact Info</fullName>
                <isActive>false</isActive>
                <label>Dead - Bad / No Contact Info</label>
            </value>
            <value>
                <fullName>Dead - Doesn&apos;t Exist</fullName>
                <isActive>false</isActive>
                <label>Dead - Doesn&apos;t Exist</label>
            </value>
            <value>
                <fullName>Dead - No Longer There</fullName>
                <isActive>false</isActive>
                <label>Dead - No Longer There</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>