force-app/main/default/objects/Contact/fields/Training_Completion__c.field-meta.xml
<CustomField>
    <fullName>Training_Completion__c</fullName>
    <label>Training Completion</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Technical</fullName>
            </value>
            <value>
                <fullName>Demo Certification</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>