force-app/main/default/objects/Contact/fields/Type_DEPRECATE__c.field-meta.xml
<CustomField>
    <fullName>Type_DEPRECATE__c</fullName>
    <label>DEPRECATE Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SP5 - Head of Company</fullName>
            </value>
            <value>
                <fullName>SP5 - Head of Operations</fullName>
            </value>
            <value>
                <fullName>SP5 - Head of Finance</fullName>
            </value>
            <value>
                <fullName>SP5 - Head of Service/Sales</fullName>
            </value>
            <value>
                <fullName>SP5 - Head of IT</fullName>
            </value>
            <value>
                <fullName>Operations</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>Service/Sales</fullName>
            </value>
            <value>
                <fullName>IT</fullName>
            </value>
            <value>
                <fullName>Partner - Consultant</fullName>
            </value>
            <value>
                <fullName>Partner - Sales/Marketing</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>