force-app/main/default/objects/Contact/fields/UniqueEntry__EnrichedOn__c.field-meta.xml
<CustomField>
    <fullName>UniqueEntry__EnrichedOn__c</fullName>
    <label>EnrichedOn</label>
    <type>DateTime</type>
</CustomField>