force-app/main/default/objects/Contact/fields/UniqueEntry__ZoomInfo_Parent_Company_ID__c.field-meta.xml
<CustomField>
    <fullName>UniqueEntry__ZoomInfo_Parent_Company_ID__c</fullName>
    <label>ZoomInfo Parent Company ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>