force-app/main/default/objects/Contact/fields/ZoomInfo_Contact_has_Changed_Job__c.field-meta.xml
<CustomField>
    <fullName>ZoomInfo_Contact_has_Changed_Job__c</fullName>
    <label>ZoomInfo Contact has Changed Job</label>
    <length>50</length>
    <type>Text</type>
</CustomField>