force-app/main/default/objects/Contact/listViews/AC_Contacts_List.listView-meta.xml
<ListView>
    <fullName>AC_Contacts_List</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>Account.AC_Interest__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Account.AC_Interest__c</field>
        <operation>notEqual</operation>
        <value>Yes/In Process,No,Trial,Purchased</value>
    </filters>
    <filters>
        <field>Account.of_Analytics_Opps__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>Account.AC_Interest__c</field>
        <operation>notEqual</operation>
        <value>Yes/In Process,No,Trial,Purchased</value>
    </filters>
    <filters>
        <field>Inactive__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>ACCOUNT.TYPE</field>
        <operation>equals</operation>
        <value>Client - Direct,Client - Registered to Partner</value>
    </filters>
    <label>AC Contacts List</label>
    <sharedTo>
        <group>Partner_Account_Audit</group>
        <role>CAM</role>
        <role>CAM_Sales_Manager</role>
    </sharedTo>
</ListView>