force-app/main/default/objects/Contact/listViews/Partner_Contacts.listView-meta.xml
<ListView>
    <fullName>Partner_Contacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.TYPE</field>
        <operation>equals</operation>
        <value>Partner - Prospective,Partner - Reseller,Partner - Referral</value>
    </filters>
    <label>Partner Contacts</label>
</ListView>