force-app/main/default/objects/Contact/listViews/Sales_Clover_Import.listView-meta.xml
<ListView>
    <fullName>Sales_Clover_Import</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Contact_Source__c</field>
        <operation>equals</operation>
        <value>Marketing</value>
    </filters>
    <filters>
        <field>Contact_Subsource__c</field>
        <operation>equals</operation>
        <value>Market Research</value>
    </filters>
    <label>Sales Clover Import</label>
</ListView>